Cleanup, make sure it works with older syntax, get rid of warnings